<resources>
    <string name="no">아니오</string>
    <string name="ok">네</string>
    <string name="cancel">취소</string>
    <string name="disable">비활성화</string>
    <string name="delete_all">삭제합니다</string>
    <string name="deleted">삭제되었습니다.</string>
    <string name="saved">저장되었습니다.</string>
    <string name="delete_confirm">정말로 삭제하시겠습니까?</string>
    <string name="accept">수락</string>
    <string name="refuse">거절</string>
    <string name="accepted">수락하였습니다.</string>
    <string name="refused">거절하였습니다.</string>
    <string name="sign_in_success">이제 일기를 안전하게 저장합니다.</string>
    <string name="sign_up_success">환영합니다! 성공적으로 가입되었습니다.</string>
    <string name="public_square">퍼블릭 광장</string>
    <string name="today_is">오늘은 %s</string>
    <string name="sent">발송되었습니다.</string>
    <string name="writer">작성자</string>
    <string name="delete_soon">곧 삭제됩니다.</string>
    <string name="time">시간</string>
    <string name="back">뒤로가기</string>
    <string name="waiting">기다리는 중입니다.</string>
    <string name="feedback">피드백</string>
    <string name="yesterday">어제</string>
    <string name="app_name">오늘일기</string>
    <string name="today">오늘</string>
    <string name="diary">일기</string>
    <string name="letter">편지</string>
    <string name="store">상점</string>
    <string name="square">광장</string>
    <string name="receiver">받는 사람</string>
    <string name="account">계정</string>
    <string name="setting">설정</string>
    <string name="help">도움말</string>
    <string name="app_version">앱 버전</string>
    <string name="share_app">공유</string>
    <string name="diary_theme">일기장 테마</string>
    <string name="diary_theme_description">일기장 테마를 선택합니다.</string>
    <string name="diary_theme_download">새로운 일기장 테마를 준비하고 있습니다.</string>
    <string name="diary_music">일기 음악</string>
    <string name="diary_music_description">일기 배경음악을 선택합니다.</string>
    <string name="diary_music_download">새로운 일기 배경음악을 준비하고 있습니다.</string>
    <string name="font_size">글자 크기</string>
    <string name="font_size_description">글자 크기를 조절합니다.</string>
    <string name="front_size_sample_text">&quot;오늘은 기분이 좋다.&quot;</string>
    <string name="alias_feature">별칭 기능</string>
    <string name="alias_feature_description">일기모임이나 편지에서 사용할 별칭을 설정합니다.</string>
    <string name="screen_lock">화면잠금</string>
    <string name="screen_lock_description">앱 잠금을 설정합니다. 복구를 위해 계정 로그인이 필요합니다.</string>
    <string name="diary_alarm">일기시간 알림</string>
    <string name="diary_alarm_description">일시 쓸 시간에 알림을 받습니다.</string>
    <string name="diary_alarm_description_set">설정된 알림시간 : %s</string>
    <string name="diary_alarm_description_set_message0">이제 일기알림이 동작하지 않습니다.</string>
    <string name="diary_alarm_description_set_message1">일기 쓸 시간에 알려드리겠습니다 :-)</string>
    <string name="diary_group_invitation">일기모임 초대받기</string>
    <string name="diary_group_invitation_description">일기모임 초대장을 받습니다.</string>
    <string name="diary_group_invitation_pop_title">일기모임 초대장 받지않기</string>
    <string name="diary_group_invitation_pop_description">비활성화하지 않고도 초대장을 거절할 수 있습니다.\n해당 기능을 비활성화하시겠습니다.</string>
    <string name="auto_delete_post">포스트 자동 삭제</string>
    <string name="auto_delete_post_description">30일이 지난 포스트를 자동으로 삭제합니다.</string>
    <string name="auto_delete_letter">편지 자동 삭제</string>
    <string name="auto_delete_letter_description">30일이 지난 편지를 자동으로 삭제합니다.</string>
    <string name="reset_data">일기 데이터 초기화</string>
    <string name="reset_data_description">모든 일기, 편지, 설정 등의 데이터를 삭제합니다.</string>
    <string name="reset_data_pop_description">정말로 모든 데이터를 삭제하시겟습니까?\n계정으로 동기화되지 않은 일기들은 복구할 수 없습니다.</string>
    <string name="start_a_diary">일기 시작하기</string>
    <string name="free_account">무료 계정</string>
    <string name="free_account_description">- 일기를 백업하고 복구하세요.\n- 추가적인 앱 기능</string>
    <string name="free_account_button">계정 생성</string>
    <string name="create_free">무료로 계정 만들기</string>
    <string name="already_has_account">이미 계정이 있으신가요?</string>
    <string name="sign_in">로그인</string>
    <string name="sign_in_description">가입한 이메일로 로그인하세요.</string>
    <string name="sign_in_button">로그인</string>
    <string name="sign_up_fail">이미 사용 중이거나 유효하지 않은 이메일입니다.</string>
    <string name="sign_in_fail">이메일이나 비밀번호가 맞지 않습니다.</string>
    <string name="find_password_fail">계정을 찾을 수 없습니다.</string>
    <string name="find_password_success">새로운 비밀번호가 이메일로 발송되었습니다.</string>
    <string name="delete_account_success">당신의 성공적으로 계정이 삭제되었습니다.\n단말에 남아있는 일기를 모두 삭제하려면 설정에서 데이터 초기화 하세요.</string>
    <string name="incorrect_password">올바르지 않은 비밀번호</string>
    <string name="invalid_password">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="change_password_success">비밀번호가 성공적으로 변경되었습니다.</string>
    <string name="network_fail">네트워크 오류입니다. 나중에 다시 시도하세요.</string>
    <string name="email_export_confirm">이메일로 일기를 받기 전에 일기가 최신으로 동기화가 되었는지 확인하세요.</string>
    <string name="email_export_ok">내보내기</string>
    <string name="email_export_success">일기가 이메일로 전송되었습니다.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="confirm_new_password">새 비밀번호 확인</string>
    <string name="missing_parameter">빠진 부분이 있습니다.</string>
    <string name="confirm_password_confirm">비밀번호가 일치하지 않습니다.</string>
    <string name="not_email_pattern">이메일이 입력되어야 합니다.</string>
    <string name="synchronization">동기화</string>
    <string name="last_sync_time">마지막 동기화 시간</string>
    <string name="email_export">이메일 내보내기</string>
    <string name="email_export_description">일기를 이메일로 받을 수 있습니다.</string>
    <string name="change_account">계정 변경</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change_account_description">비빌번호 변경, 계정삭제</string>
    <string name="change_password_description">오래된 비밀번호를 변경할 수 있습니다.</string>
    <string name="change_password_button">비밀번호 변경</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_password_description">이메일을 통해 새로운 비밀번호를 받을 수 있습니다.</string>
    <string name="find_password_button">새 비밀번호 받기</string>
    <string name="delete_account">계정 삭제하기</string>
    <string name="delete_account_description">주의하세요!\n계정을 삭제하면 다시 되돌릴 수 없습니다.</string>
    <string name="delete_account_button">계정 영구삭제</string>
    <string name="sign_out">로그아웃</string>
    <string name="sign_out_description">현재 단말에서 로그아웃합니다. 동기화가 중단됩니다.</string>
    <string name="sign_out_confirm">정말 로그아웃 하시겠습니까?</string>
    <string name="sign_out_success">로그아웃 되었습니다.</string>
    <string name="store_pop_current_money">당신은 %d \ 시간이 있습니다.</string>
    <string name="store_pop_require_money">필요시간 : %d 시간</string>
    <string name="store_pop_it_is_free">공짜입니다!</string>
    <string name="store_pop_already_bought">이미 구매하였습니다.</string>
    <string name="store_pop_not_enough_money">시간이 충분하지 않습니다.</string>
    <string name="store_pop_group_already_exists">참여한 일기모임이 있습니다.</string>
    <string name="store_pop_cannot_support">더 이상 지원할 수 없습니다.</string>
    <string name="store_pop_go_to_setting">설정에서 변경할 수 있습니다.</string>
    <string name="store_pop_lose_the_draw">꽝입니다.</string>
    <string name="store_pop_lose_the_draw_description">꽝이 있는 줄 몰랐나요? 어쩔 수 없습니다.</string>
    <string name="store_pop_weather_title">날씨</string>
    <string name="store_pop_weather_description">오늘의 날씨 정보를 들으세요!</string>
    <string name="store_pop_weather_result_title">날씨정보를 알려드립니다.</string>
    <string name="store_pop_weather_result_description1">현재 당신 마음의 날씨는 맑음!</string>
    <string name="store_pop_weather_result_description2">현재 당신 마음의 날씨는 흐림...</string>
    <string name="store_pop_post_title">포스트잇</string>
    <string name="store_pop_post_description">광장에 글을 쓸 수 있습니다.</string>
    <string name="store_pop_post_description_detail">시간과 포스트잇의 접착력은 비례함</string>
    <string name="store_pop_post_result_title">포스트잇 구매성공</string>
    <string name="store_pop_post_result_description">모두의 광장에서 글을 작성하세요!</string>
    <string name="store_pop_about_title">이야기 듣기</string>
    <string name="store_pop_about_description">당신에 대한 이야기</string>
    <string name="store_pop_nickname_title">랜덤 닉네임</string>
    <string name="store_pop_nickname_description">무작위로 닉네임이 변경됩니다.</string>
    <string name="store_pop_nickname_result_title">닉네임이 바뀌었습니다!</string>
    <string name="store_pop_nickname_result_description">%s -> %s</string>
    <string name="store_pop_theme_title">랜덤 일기장 테마</string>
    <string name="store_pop_theme_description">무작위 일기장 테마를 구매합니다.</string>
    <string name="store_pop_theme_description_detail">설정에서 변경 가능</string>
    <string name="store_pop_theme_result_title">새로운 일기장 테마 구매성공</string>
    <string name="store_pop_theme_result_description">이름: %s</string>
    <string name="store_pop_music_title">랜덤 일기 음악</string>
    <string name="store_pop_music_description">일기 작성시 들을 수 있는 배경음악</string>
    <string name="store_pop_music_description_detail">설정에서 변경 가능</string>
    <string name="store_pop_music_result_title">새로운 일기 배경음악 구매성공</string>
    <string name="store_pop_music_result_description">이름: %s</string>
    <string name="store_pop_group_invite_title">일기모임 주최</string>
    <string name="store_pop_group_invite_description">일기모임을 주최합니다.(도움말 참조)</string>
    <string name="store_pop_group_invite_description_detail">일기모임 동안 익명의 모임사람들과 서로 일기를 공유합니다.</string>
    <string name="store_pop_group_invite_result_title">일기모임을 만들었습니다.</string>
    <string name="store_pop_group_invite_result_description">일기모임 초대장이 발송되었습니다!</string>
    <string name="store_pop_group_invite_result_description_detail">일기모임에 대한 자세한 내용은 도움말을 참조하세요.</string>
    <string name="store_pop_group_support_title">일기모임 지원</string>
    <string name="store_pop_group_support_description">더 많은 사람이 참여할 수 있습니다.</string>
    <string name="store_pop_group_support_result_title">성공하였습니다.</string>
    <string name="store_pop_group_support_result_description">추가 초대장이 발송되었습니다.</string>
    <string name="store_pop_group_support_result_description_detail">이제 더 많은 사람이 모임에 참여할 수 있습니다.</string>
    <string name="store_pop_donation_title">시간 기부</string>
    <string name="store_pop_donation_description">혹시 시간이 넘치시나요?</string>
    <string name="store_pop_donation_result_title">당신은 좋은 사람입니다.</string>
    <string name="store_pop_donation_result_description">%d 시간이 기부되었습니다.</string>
    <string name="store_pop_donation_result_description_0">당신의 착한 마음이 기부되었습니다.</string>
    <string name="store_pop_donation_result_description_detail">당신의 총 기부금액 : %d 시간</string>
    <string name="group_started_no_group_name">모임 이름을 결정하기 위한 회의가 진행 중입니다.</string>
    <string name="group_prepare_content">현재 참여자 수: %d명\n시작까지 남은시간: %s</string>
    <string name="group_started_tip1">익명의 일기모임에 참가 중입니다.</string>
    <string name="group_started_tip2">다른 사람의 일상을 공감해보세요.</string>
    <string name="group_started_tip3">당신과 %d명의 사람은 어제 이야기를 공유합니다.</string>
    <string name="group_solo_tip1">초대된 사람이 없습니다.</string>
    <string name="group_solo_tip2">오직 당신만을 위한 일기모임</string>
    <string name="group_prepare_tip1">일기모임을 준비하고 있습니다.</string>
    <string name="group_prepare_tip2">모임장소를 물색 중입니다.</string>
    <string name="group_prepare_tip3">모임기간 중 날씨를 확인 중입니다.</string>
    <string name="group_yesterday_diary_of_who">%s님의 어제일기</string>
    <string name="group_today_diary_of_who">%s님의 오늘일기</string>
    <string name="post_fragment_pop_title">광장 이용설명서</string>
    <string name="post_fragment_pop_manual_1">1. 마음대로 글을 쓸 수 있습니다.</string>
    <string name="post_fragment_pop_manual_2">2. 글을 수정하고 삭제할 수 있습니다.</string>
    <string name="post_fragment_pop_manual_3">3. 광장에 쓴 글은 당신만 볼 수 있습니다.</string>
    <string name="post_fragment_pop_manual_4">4. 너무 오래된 글은 자동 삭제됩니다.\n    (설정에서 삭제되지 않게 변경 가능)</string>
    <string name="post_fragment_pop_manual_5">5. 퍼블릭 광장에 글을 쓰려면 상점에서 포스트잇을 사세요.\n   (무료로 살 수 있습니다.)</string>
    <string name="post_fragment_pop_manual_6">6. 퍼블릭 광장의 글은 모두가 볼 수 있습니다.</string>
    <string name="post_fragment_pop_manual_7">7. 더 많은 시간의 포스트잇이 더 위에 노출됩니다.</string>
</resources>